# BaseCampTask

./: .gitignore
FileSearch/: CMakeLists.txt
FileSearch/include/: FileSearch.h
FileSearch/src/: FileSearch.cpp
FileSeeker/: CMakeLists.txt
FileSeeker/include/: FileSeeker.h
FileSeeker/src/: FileSeeker.cpp
